ISPN-12502 GC logging provided by default with GC_LOG is valid for Java 8 only